shifting a playtesting section to chapter 5

--- a/_posts/thesis_chapters/2024-6-5-Design.md
+++ b/_posts/thesis_chapters/2024-6-5-Design.md
@@ -900,9 +900,11 @@ An additional rationale for this process was to help reduce potential internal b
 
 <!-- In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework. -->
 
-The experience of the family with withdrew outlined in C1  aligns with research addressing barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. The story is an example of a conflict composed of accumulating tensions which resulting alienation from the group coding environment and associated peer working dynamics.
+The experience of the family with withdrew outlined in C1  The story is an example of a conflict composed of accumulating tensions which resulting alienation from the group coding environment and associated peer working dynamics. While there were technical aspects to the conflict, these were compounded with more social and cultural barriers that also arose.
 
-The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect to the working community. These include:
+This aligns with research addressing barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. SUMMARISE HOW.
+
+The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect towards the working community. These include:
 
 -   An awareness of the danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued.
 -   A concern for the fragility of learners positive affect towards the group game making process and thus the need for initial playful starting and closing activities to be continued beyond initial sessions.
@@ -910,26 +912,22 @@ The incident lead me to greater reflection on ongoing measures needed to prevent
 
 My journal notes detailed an evolution of attempts during P2 and P3 to try to build into the program, a variety of activities which help build the participants sense of their own identities of game makers or more generally digital designers. While chapter six examines these aspects in more depth, the evolution of key design features are summarised in this section, namely social coding processes,  playtesting and the use of a drama process.
 
-#### Social coding processes
+### Social coding processes
+
 
 Some barriers stemming from alienation from participant group working processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
 
-The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
+The changes in design between P1 and P2, in terms of a templated design, facilitated participants to work by themselves or with only their family.
 
-Thus in P2, rather than the larger groups of P1, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group fragmentation and encouraging freedom of participation vs benefiting from parental involvement.
+The shifts encouraged a greater freedom of participation in terms of a flexible approach to division of labour and design process, evidence of which is explored in more detail in Chapter 7, but is summarised here.
 
+This shift way from larger groups also addressed issues of disconnected group work cause by unrealistic and inexperience of dividing labour on a coding project.
 
+This shift helped address one parents' concern expressed in end of P1 feedback, that of parents getting in the way of children's freedom to jumping in to other peoples working processes in order to gain peer learning.
 
+The value of peer social experiences which emerged naturally at this stage was such that for P3 I sought to intervene gently to encourage them. This is explored in the social missions section below.
 
-<!-- Based on my previous teaching experience, analysis of literature and knowledge of platform games, I pre-prepared a set of coded example and tutorials to implement a range of game design patterns. -->
-
-
-
-
-P2 introduced some of the changes
-- Keeping games working to allow for less frustation - this promoted more playtestin time. explored next.
-
-
+The process of starting with a half-working prompted more time to be spent on self and peer-playtesting an aspect explored in the next section.
 
 <!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),**
 
@@ -943,7 +941,7 @@ The value of playfulness is illustrated with one exit interview with a parent wh
 I was struck that his incident happened during a session where I had not played customary drama games to create an inclusive environment. The games had been omitted as I was responding to a sense of urgency coming from families to solve problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors. -->
 
 
-<!-- NOTE - CREATE A LINK IN CHAPTER 6 - around line 300  -->
+<!-- NOTE - CREATE A LINK IN CHAPTER 7 - around line 300  -->
 
 <!-- NOTE -
 DEVELOP THIS IN LIT REVIEW - Start here [@kafai_constructionist_2015-1]
@@ -970,11 +968,19 @@ COMPLETELY REMOVED SECTION ON PHYSICAL MAPS -->
 As explored in the literature review, playtesing is a process common to game making which corresponds to the evaluation phase of design thinking cycles.
 BE SURE TO CHECK THAT IT IS!
 
-By the time video data recording started in phase three there were already complex patterns of playtesting underway. In this section, I review data to describe some of the emerging playtesting behaviours of participants.
+In this section, I review data to describe some of the emerging playtesting behaviours of participants in relation to the introduced learning design.
 
-In journal notes, I observed that the shift of process from a more open creation in p1 one to the use of a _half-baked_ templated greatly increased the amount of time participants spent playtesting their own and other games. This is implicit in the process of starting from a broadly functional game.  
+My broad observations align with the supported benefits outlined in research on the Use-Modify-Create (UMC)  [-@lytle_use_2019-1] and particularly the technique of starging with  half baked games [@grizioti_game_2018-1].
 
-NOTE - can support or discussion based on the research on UMC  [-@lytle_use_2019-1] or that of half baked games [@grizioti_game_2018-1] be of use here. As a facilitator I would note my own concern if errors compounded to make the participants game unplayable for any extended time.  
+MAKE A SUMMARY OF UMC / HALF BAKED BENEFITS EXPLICIT HERE.
+A benefit explored above is the scaffolding and the affordences provided by the code template. These technical supports became manifested in the social and cultural processes primarily through playtesting of the diversity of games created by participants.
+
+In journal notes, I observed that the shift of process from a more open creation in P1 one to the use of a _half-baked_ templated greatly increased the amount of time participants spent playtesting their own and other games. In P2, while the process of peer playtesting was encouraged in the latter third of each two hoour session it was not explicitly guided. Quickly complex patterns of playtesting emerged.
+
+I noted my own concern if errors compounded to make the participants game unplayable for any extended time. In video data, participants show frustrastion if not able to playtest game due to errors (for a clear example see Olivia and Suzanna's frustration in Appendix 5.x.)
+
+
+#### Playtesting facilitating peer encouragement
 
 Participants, particularly older ones, used playtesting as a way of showing support for fellow game makers. Example behaviours included: praising graphical content; making links with home interests of participants through questioning; and building rapport.
 
@@ -986,9 +992,10 @@ Molly in particular used playtesting to show her appreciation of the graphical w
 <!-- By the time phase three and video capture of data was underway, the process of playtesting began to take on interesting characteristics for some younger participants who were working more independently. -->
 <!-- Because these interactions were mobile between works is it hard to transcribe interactions. However, description of the physical movement and gestures of the young people is relevant to explore the value of this behaviour which I will call playful playtesting.  -->
 
-
  <!-- Examples include.... -->
-Some children added additional playful elements to playtesting. Because these interactions were mobile between works is it hard to extract audio and transcribe their speech. However, it is possible to communicate the characteristics of this play via a description of a typical encounter and the gestures of participants.
+
+
+Some children added additional playful elements to playtesting. Because these interactions were mobile between workstations is it hard to extract audio and transcribe their speech. However, it is possible to communicate the characteristics of this play via a description of a typical encounter and the gestures of participants.
 
 WATCH MORE CLOSELY AND TRANSCRIBE GESTURES
 
@@ -1001,6 +1008,49 @@ These changes to the form and function of playtesting by young participants is a
 
 
 The process of play testing as a cultural process is explored in more depth in chapter six.
+
+
+#### Community concepts and norming behaviour emerging during playtesting
+
+<!-- THERE IS DOUBLICATION WITH NEXT CHAPTER - REEVALUATE / REFACTOR - ESP CONCEPT OF SAFE ZONE -->
+
+
+<!-- The elements of variables controlling player movement, the ability to place hazards in the layout of the platform game were initial changes that all participants made but the end results greatly varied in terms of the challenge of the games. Discussions on game challenge, specifically comments about how 'hard' participant games were the most common forms of interaction during playtesting.
+
+Through this informal feedback participants sought to influence peers to modify the playability and challenge games to increase the enjoyment of peer players. For example, parent Molly had been focused mostly on completing asset design this had created a very frustrating game experience in terms of the player's movement. Just before this extract, as a facilitator, I shared feedback about using quite indirect technical language when giving feedback (See appendix 4.x). -->
+
+<!-- PERHAPS TURN THIS INTO A TABLE WITH GESTURE?  -->
+
+<!-- Bertie: That looks nice (referring to the graphical look of the game)
+
+Molly invites Bertie: to play as she can't progress due to the difficult game controls.
+
+Bertie: It jumps super high but so slow.  
+Pause
+Molly: He has to go slow because he's an astronaut, you see.    
+Bertie: It's hard.
+(Bertie leaves.)
+Molly: (to peer parent with proud tone.) It's hard. Wow.
+
+(Ed comes to play the game)
+Ed: How much jump speed to you have?
+Ed: Your jump speed is massive.
+
+Molly initially misconstrues feedback from Bertie that her game is hard as a positive thing. A variety of comments nudge Molly to change her game to align with an emerging community norm of what a sensible jump behaviour should be. Feedback from Mick attempts to bridge a technical and conversational approach. Feedback from Bertie is direct about his player experience as a player.  -->
+
+NOTE THERE IS SOMETHING HERE ABOUT ME STEPPING BACK AND LETTING THE COMMUNITY EVOLVE.
+
+Ed gives a more technical explanation from  involving the naming of the variable _jump speed_.
+
+Other children come and play the game but only for less than a minute before leaving. Towards the end of the playtesting process, as one child leaves, Molly comments "It's so frustrating." This suggests an evolving understanding that her game is frustrating to players rather than pleasantly challenging.
+
+The indirect norming behaviours ... described in previous chapter ...  mirror observations seen in the work of Rogoff and colleagues[@rogoff_cultural_2003] on learning in  community settings. There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
+
+To better understand this process it is relevant to locate the source of these wider expectations and to evaluate their utility here. This is attempted in the discussion section of the chapter.
+
+What we can draw from the data at this stage is that playtesing provides many leverage points to facilitating learner agency and discuss the limits of designs. IN addition, playtesting is a process that allows participants to demonstrate informed criticality as a player and guide the creations of peers via gameplay feedback.
+
+
 
 
 #### Local playtesting rather than participation with a wider online community
